--- a/contato/templates/contato/contato.html
+++ b/contato/templates/contato/contato.html
@@ -38,8 +38,8 @@
             <!-- Full Name -->
             <div class="row mb-4">
                 <div class="col-12">
-                    <label for="idNomeCompleto" class="form-label">Nome completo</label>
-                    <input class="form-control form-control-lg" type="text" id="idNomeCompleto" name="nome_completo" 
+                    <label for="idTxtNomeCompleto" class="form-label">Nome completo</label>
+                    <input class="form-control form-control-lg" type="text" id="idTxtNomeCompleto" name="nome_completo" 
                            placeholder="Digite seu nome completo" maxlength="100" required>
                 </div>
             </div>
@@ -64,7 +64,7 @@
             <div class="row mb-4">
                 <div class="col-md-6">
                     <label for="idMelhorHorario" class="form-label">Melhor horário para contato</label>
-                    <select class="form-select" id="idMelhorHorario" name="melhor_horario" required>
+                    <select class="form-select" id="idBSelMelhorHorario" name="melhor_horario" required>
                         <option value="" selected disabled>Selecione um horário</option>
                         <option value="Manhã">Manhã (8h às 12h)</option>
                         <option value="Tarde">Tarde (13h às 18h)</option>
