--- a/fornecedores/templates/fornecedores/cadastroFornecedores.html
+++ b/fornecedores/templates/fornecedores/cadastroFornecedores.html
@@ -40,8 +40,8 @@
 
     
         <div>
-            <label for="idNome" class="form-label">nome</label>
-            <input class="form-control" type="text" id="idNome" name="nome" 
+            <label for="idTxtNome" class="form-label">nome</label>
+            <input class="form-control" type="text" id="idTxtNome" name="nome" 
                    placeholder="Informe o nome" maxlength="11" required>
         </div>
     
