--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -38,8 +38,8 @@
             <!-- Full Name -->
             <div class="row mb-4">
                 <div class="col-12">
-                    <label for="idUsuario" class="form-label">Usúario</label>
-                    <input class="form-control form-control-lg" type="text" id="idUsuario" name="Usuario" 
+                    <label for="idTxtUsuario" class="form-label">Usúario</label>
+                    <input class="form-control form-control-lg" type="text" id="idTxtUsuario" name="Usuario" 
                            placeholder="Digite seu Usúario" maxlength="100" required>
                 </div>
             </div>
